# bashvar-sentry

./: README.md  pyproject.toml
contrib/: PKGBUILD
src/bashvar_sentry/: __init__.py  exceptions.py  sentry.py
src/bashvar_sentry/resources/: inspector.sh
tests/: test_sentry.py
