[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bashvar_sentry"
version = "1.0.0"
authors = [{ name = "Your Name", email = "you@example.com" }]
description = "A robust Python module to safely source a bash script in a sandboxed environment and collect its variables."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Shells",
  "Development Status :: 4 - Beta",
  "Topic :: Utilities",
]
dependencies = ["importlib-resources; python_version<'3.9'"]

[project.urls]
Homepage = "https://github.com/your_username/bashvar_sentry"
Issues = "https://github.com/your_username/bashvar_sentry/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"bashvar_sentry.resources" = ["*.sh"]

[project.optional-dependencies]
test = ["pytest"]
